DONE: finished affine report. Doing: Lfsr, des repport. TODO: RSA, DSA

--- a/Affine/Makefile
+++ b/Affine/Makefile
@@ -1,5 +1,5 @@
 binary:main.cpp affine.o
-	g++ -o affine main.cpp affine.o
+	g++ -o binary main.cpp affine.o
 
 affine.o:affine.cpp
 	g++ -c -o affine.o affine.cpp
